--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,10 @@ hs_err_pid*
 
 # editor
 .vscode
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
+
+!gradle-wrapper.jar
